# covalent-practice

./: .gitignore  README.md  nohup.out  pyproject.toml  test.ipynb  test2.ipynb  test_shell.ipynb  test_slurm.ipynb
