[project]
name = "covalent-practice"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "Andreas Copan", email = "avcopan@gmail.com"}]
requires-python = ">= 3.10"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
covalent-practice = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
covalent = ">=0.232.0.post1,<0.232.1"
jupyter = ">=1.0.0,<1.1"
